# lyric-check

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
asset/: index.css
src/: asset.rs  diff.rs  lib.rs  main.rs  music.rs  script.rs
src/music/: bar.rs  repeat.rs  syllable.rs  verse.rs  word.rs
templates/: base.html  diff.html  folder.html  home.html
